--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-scroll": "^1.8.6",
     "autoprefixer": "9.8.6",
+    "framer-motion": "^8.5.5",
     "postcss-cli": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.4.1",
+    "react-scroll": "^1.8.9",
     "tailwind-scrollbar": "^2.0.1",
     "tailwindcss": "^3.2.4",
     "tw-elements": "^1.0.0-alpha12"
