--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-icons": "^3.0.0",
+    "@types/react-recaptcha": "^2.3.4",
     "@types/react-scroll": "^1.8.6",
     "autoprefixer": "9.8.6",
+    "axios": "^1.3.1",
+    "formik": "^2.2.9",
     "framer-motion": "^8.5.5",
     "postcss-cli": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-intersection-observer": "^9.4.1",
+    "react-recaptcha": "^2.3.10",
     "react-scroll": "^1.8.9",
     "tailwind-scrollbar": "^2.0.1",
     "tailwindcss": "^3.2.4",
